...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/dark">


        <LinearLayout
            android:id="@+id/linear_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="30dp">
            <!---->
...
                android:padding="16dp"
                android:src="@drawable/coursaide"
                app:layout_constraintBottom_toTopOf="@+id/bgTextView"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <!--
        refer to styles.xml for @style/login_pages
        -->

                <EditText
                    android:id="@+id/student_username"
                    style="@style/login_pages"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:selectAllOnFocus="false"
                    android:singleLine="false" />

                <EditText
                    android:id="@+id/student_password"
                    style="@style/login_pages"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="false"
                    android:singleLine="false"

                    />


                <CheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textColor="#eeeeee" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="34dp"
                    android:background="@drawable/white_rounde_rec"
                    android:clickable="true"
...
