...
       >
       <Space
           android:layout_width="1dp"
           android:layout_height="10dp" />

       <Button
           android:id="@+id/set_edit_profile_button"
           style="@style/menu_text"
           android:layout_width="match_parent"
           android:layout_height="70dp"
           android:background="@drawable/tp"
           android:drawableLeft="@drawable/ic_settings_white_24dp"
           android:text="Edit profile"

           android:textAlignment="textStart" />

       <View style="@style/Divider"/>

       <Button
...
