...
    <string name="upload">Upload</string>
    <string name="upload_time_table">Upload Time Table</string>
    <string name="new_bucket_name">Name of new bucket</string>
    <string name="new_spl_name">Name of new specialization</string>
    <string name="username">Username</string>
    <string name="pass">........</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="upload_courses">Upload Courses</string>
    <string name="add_courses">Add Courses</string>
    <array name="Branches">
        <item>CSE</item>
        <item>ECE</item>
...
